# inflation-resistant-stablecoin

./: README.md  d  package.json
anchor-rust/: Anchor.toml
anchor-rust/programs/anchor-rust/: Cargo.toml
irma/: .env  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
irma/programs/irma/: Cargo.toml
irma/programs/irma/src/: initialize_markets.rs  iopenbook.rs  lib.rs  openbook_listener.rs  pricing.rs
irma/programs/irma/tests/: unit.rs
irma/tests/: irma.ts
openbook-v2-ui/: package-lock.json  package.json
openbook-v2-ui/openbook/: client.ts
openbook-v2-ui/pages/: create_market.tsx  index.tsx
openbook-v2-ui/utils/: openbook.ts
openbookv2-cranker-main/: .env.example  .gitignore  Readme.md  docker-deploy.sh  dockerfile  package.json  tsconfig.json
openbookv2-cranker-main/src/: OpenBookCrank.ts  crank.ts  utils.ts
