[package]
name = "irma_program"
version = "0.1.0"
description = "Inflation Resistant Medium of Account (IRMA)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "irma_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# anchor-debug = []
# custom-heap = []
# custom-panic = []


[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
# anchor-spl = { workspace = true }
# arbitrary = { version = "~1.0", features = ["derive"], optional = true }
# arrayref = "0.3.6"
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
# default-env = "0.1.1"
# derivative = "2.2.0"
fixed = { workspace = true, features = ["debug-assert-in-release"] }
itertools = "0.10.3"
num_enum = "0.5.1"
# pyth-sdk-solana = { workspace = true }
solana-security-txt = "1.1.1"
solana-program = { workspace = true }
solana-sdk = { workspace = true, optional = true }
static_assertions = "1.1"
solana-sdk-ids = "2.2.1"
# switchboard-program = ">=0.2.0"
# switchboard-solana = "0.29.99"
